examples/diagnostics_demos/errors/Aurora.flx
  fn echo(x, x) {
    return x;
  }
